completed with json-server

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "autotable",
         "Chhattisgarh",
+        "dropoff",
         "kitecab",
         "onway",
-        "onwaypickup"
+        "onwaypickup",
+        "supabase",
+        "vehical"
     ]
 }
