--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "@supabase/supabase-js": "^2.46.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "deno": "^0.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "mysql": "^2.18.1",
     "ngx-mat-timepicker": "^18.0.0",
     "ngx-material-timepicker": "^13.1.1",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.16",
+    "resend": "^4.0.1-alpha.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -42,7 +47,7 @@
     "@angular/compiler-cli": "^17.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/node": "^18.19.64",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -52,6 +57,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
     "typescript": "~5.3.2"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 17.2.3.",
