--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/assets/20241024_121332.png",
+              "src/favicon.png",
               "src/assets"
             ],
             "styles": [
@@ -45,7 +45,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "500kb",
-                  "maximumError": "1.5mb"
+                  "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -97,7 +97,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/assets/20241024_121332.png",
+              "src/favicon.png",
               "src/assets"
             ],
             "styles": [
